Initial Commit of Person and PersonPhone

--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using HumanResourcesApp
-@using HumanResourcesApp.Models
+﻿@using HumanResourceApp
+@using HumanResourceApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
